<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        >

        <FrameLayout
            android:id="@+id/progressContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black_20"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                >

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:theme="?android:attr/progressBarStyleLarge"
                    />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/accessibility_weather_search_button"
            android:text="@string/search_button"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchInput"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/accessibility_weather_search_input"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherInfoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/accessibility_weather_info_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
